--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ html {
 .atas img {
   display: inline-block;
   margin: 20px auto;
-  padding: 20px;
+  padding: 50px 30px;
   text-align: center;
   height: 200px;
   background-color: white;
