--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ html {
 
 .body {
   background-image: linear-gradient(#22d1ee, #3d5af1, #5aaeff);
-  width: 100%;
   padding: 0;
   margin: 0;
   background-size: cover;
@@ -69,10 +68,10 @@ html {
 
 .atas img {
   display: inline-block;
-  margin: 20px auto;
+  margin: 20px 0;
   padding: 50px 30px;
   text-align: center;
-  height: 200px;
+  height: auto;
   background-color: white;
   border-radius: 20px;
   width: 100%;
@@ -97,6 +96,7 @@ html {
   font-weight: bold;
   font-size: 1.5em;
   padding: 50px 30px;
+  margin: 40px 20px;
   border-radius: 20px;
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);
 }
@@ -165,4 +165,19 @@ html {
   text-decoration: none;
   padding: 50px 30px;
   width: 100%;
+}
+
+/* Gaya khusus untuk layar kecil (ponsel) */
+@media only screen and (max-width: 600px) {
+  .open h2 {
+    font-size: 1.2em;
+  }
+
+  .atas h2 {
+    font-size: 1.2em;
+  }
+
+  .wish {
+    width: 60%;
+  }
 }
